--- a/static/css/my.css
+++ b/static/css/my.css
@@ -40,27 +40,53 @@
 	border: 2px solid #ccc;
 }
 .resultFrame{
-	font-size:30px;
 }
 .searchBar{
-
+	background-color: #f1f1f1;
 }
 .smLogo{
-
+	height: 50px;
 }
 .searchBar div{
 	color:grey;
-	padding: 10px;
+	padding: 3px;
 	display: inline-block;
 }
+#searchTime{
+	font-size: 12px;
+}
+.promptWords{
+	color: #1a0dab;
+	font-weight: bold;
+}
 .searchTip{
-	height:20px;
+	height: 20px;
+	color: #dd4b39;
 }
 .resultList{
-
+	width: 50%;
+	margin: 15px 0px 0px 128px;
+	font-size:24px;
 }
 .resultList li{
+	color: #1a0dab;
 	padding:10px;
 }
+.myBtn1{
+	background-color: #136;
+	color: black;
+	border-radius: 4px;
+	border: 2px solid #ccc;
+}
+.icon{
+	font-size:20px;
+	font-family: 黑体;
+	color: white;
+}
 
-
+#continueWords{
+	font-size:16px;
+	padding: 6px;
+	border: solid 2px #c9c9c9;
+	transition: border 0.3s;
+}
