--- a/static/css/my.css
+++ b/static/css/my.css
@@ -2,12 +2,11 @@
 
 }
 #another{
-	width:400px;
+	width:500px;
 }
 #keywordsInput{
 	width: 80%;
 	padding: 5px 9px 5px 9px;
-	font-weight: bold;
 	display: inline-block;
 }
 .indexFrame{
@@ -30,16 +29,26 @@
 	width:100%;
 }
 .buttonsWrapper{
-	width:20%;
-	height: 40px;
+	width:18%;
+	max-width:80px;
+	height: 35px;
 	padding: 5px 9px 5px 9px;
 	display: inline-block;
+}
+.searchBar .buttonsWrapper{
+	width:12%;
+	max-width:80px;
+	height: 35px;
+	padding: 2px 9px 5px 2px;
 }
 .myBtn{
 	background-color: white;
 	color: black;
 	border-radius: 4px;
 	border: 2px solid #ccc;
+	height: 100%;
+	width: 100%;
+	font-weight: bold;
 }
 .resultFrame{
 }
@@ -69,37 +78,16 @@
 }
 .resultList{
 	width: 50%;
-	margin: 20px 0px 0px 100px;
+	margin: 20px 0px 0px 110px;
 	font-size:24px;
 }
 .resultList li{
 	color: #1a0dab;
-	padding:10px;
-}
-.myBtn{
-	width: 100%;
-	height: 30px;
-	font-weight: bold;
-}
-.myBtn1{
-	background-color: #248;
-	color: white;
-	font-size:18px;
-	height: 38px;
-	width: 40px;
-	border-radius: 3px;
-	border: 2px solid #ccc;
+	padding-bottom:15px;
 }
 .icon{
 	font-size:20px;
 	color: white;
-}
-.continueWords{
-	font-size:16px;
-	padding-left: 5px;
-	border: solid 1px #c9c9c9;
-	height: 35px;
-	min-width: 400px;
 }
 .initWords{
 	font-size: 16px;
@@ -107,4 +95,16 @@
 	width: 100%;
 	border: 1px solid #ccc;
 	padding-left: 5px;
+}
+.resultChose a{
+	display: inline-block;
+	margin-right: 15px;
+	cursor:default;
+	font-size: 16px;
+}
+.chosedItem{
+	color:#b23aee;
+}
+.unchosedItem{
+	color:#f40;
 }
