--- a/static/css/my.css
+++ b/static/css/my.css
@@ -68,13 +68,22 @@
 #searchTime{
 	font-size: 12px;
 }
+.searchTip{
+	height: 20px;
+	font-weight:bold;
+}
 .promptWords{
 	color: #1a0dab;
 	font-weight: bold;
+	font-weight:bold;
 }
-.searchTip{
-	height: 20px;
-	color: #dd4b39;
+.stillSearch{
+	font-size:16px;
+}
+.origSearch{
+	color: #1a0dab;
+	font-size:16px;
+	cursor:pointer;
 }
 .resultList{
 	width: 50%;
@@ -96,15 +105,15 @@
 	border: 1px solid #ccc;
 	padding-left: 5px;
 }
-.resultChose a{
+.chosedItem{
 	display: inline-block;
 	margin-right: 15px;
-	cursor:default;
 	font-size: 16px;
 }
-.chosedItem{
-	color:#b23aee;
-}
 .unchosedItem{
+	display: inline-block;
+	margin-right: 15px;
+	cursor:pointer;
+	font-size: 16px;
 	color:#f40;
 }
