--- a/static/css/my.css
+++ b/static/css/my.css
@@ -8,9 +8,21 @@ input::-webkit-calendar-picker-indicator {
 	width:500px;
 }
 #keywordsInput{
-	width: 80%;
-	padding: 5px 9px 5px 9px;
+	width: 68%;
+	padding: 5px 5px 5px 5px;
 	display: inline-block;
+}
+#topkInput{
+	width: 12%;
+	padding: 5px 5px 5px 2px;
+	display: inline-block;
+}
+.tkin{
+	font-size: 16px;
+	border-radius: 3px;
+	width: 100%;
+	border: 1px solid #ccc;
+	padding-left: 5px;
 }
 .indexFrame{
 	margin: 100px auto;
